...

    if(state.isContactDialogOpen){
        AddContactDialog(
            onDismissRequest = { viewModel.onEvent(ContactEvent.AddContactDialogDismissed) },
            dataProvider = viewModel,
            modifier = Modifier
                .testTag("contactDialog")
        )
    }

    if(state.isShareDialogOpen){
        ShareDialog(
            onDismissRequest = { viewModel.onEvent(ContactEvent.ShareDialogDismissed) },
...
                            )
                            top.linkTo(
                                anchor = parent.top,
                                margin = largeMargin
                            )
                        }
                        .testTag("contactDialogButton"),
                    onClick = { viewModel.onEvent(ContactEvent.AddContactDialogOpened) },
                    colors = ButtonDefaults.buttonColors(
                        containerColor = if(isPressed){
                            MaterialTheme.colorScheme.primary
                        }else{
                            MaterialTheme.colorScheme.secondary
...
