...
    <string name="loading_text">Loading..</string>
    <string name="error_text">An unknown error occurred</string>
    <string name="lidl_price_label">Lidl:</string>
    <string name="tesco_price_label">Tesco:</string>
    <string name="spar_price_label">Spar:</string>
    <string name="price_unit_huf">Ft</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="submit_button_text">Submit</string>
    <!--Input errors-->
    <string name="too_long_email">The length of the email cannot exceed 35 characters!</string>
    <string name="too_long_password">The length of the password cannot exceed 25 characters!</string>
    <string name="too_short_password">The length of the password has to reach 7 characters excluding whitespaces!</string>
    <string name="too_long_list_name">The length of the list name cannot exceed 35 characters!</string>
...
