...

    if(state.isDialogOpened){
        ProductSelectionDialog(
            onDismissRequest = { viewModel.onEvent(CreateShoppingListEvent.DialogDismissed) },
            dataProvider = viewModel,
            modifier = Modifier
                .testTag("productSelectionDialog")
        )
    }

    Scaffold(
        content = {paddingValues ->
            if(state.isLoading){
...
                        IconButton(
                            onClick = { viewModel.onEvent(CreateShoppingListEvent.AddButtonClicked) },
                            colors = IconButtonDefaults.iconButtonColors(
                                contentColor = MaterialTheme.colorScheme.onBackground
                            ),
                            modifier = Modifier
                                .testTag("productSelectionDialogIcon")
                        ) {
                            Icon(
                                painter = painterResource(id = R.drawable.ic_add),
                                contentDescription = stringResource(id = R.string.add_item_content_description)
                            )
                        }
...
